Add user profiles and tracking of questions answered by users

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,9 @@
   <div class="left_column">
   <div class="navigation">
     <ul class="markermenu">
-      <li class="markermenu"><a href="/problems">Problems</a></li>
-      <li class="markermenu"><a href="#" style="border-bottom-width: 0">About</a></li>		
+        <li class="markermenu"><a href="{% url problems_index %}">Problems</a></li>
+        <li class="markermenu"><a href="{% url accounts_logout %}">Log Out</a></li>
+        <li class="markermenu"><a href="#" style="border-bottom-width: 0">About</a></li>		
     </ul>
   </div>
 
