--- a/templates/problems/detail.html
+++ b/templates/problems/detail.html
@@ -7,9 +7,13 @@
 {{ problem.description }}
 </p>
 <p>
+{% if is_answered %}
+You've already supplied the correct answer, {{ problem.answer }}.
+{% else %}
 <form action="" method="post">{% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit" />
 </form>
+{% endif %}
 </p>
 {% endblock %}
