Remove 'About' link

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,7 @@
   <div class="navigation">
     <ul class="markermenu">
         <li class="markermenu"><a href="{% url problems_index %}">Problems</a></li>
-        <li class="markermenu"><a href="{% url accounts_logout %}">Log Out</a></li>
-        <li class="markermenu"><a href="#" style="border-bottom-width: 0">About</a></li>		
+        <li class="markermenu"><a href="{% url accounts_logout %}" style="border-bottom-width: 0">Log Out</a></li>
     </ul>
   </div>
 
