make urls arguments strings

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -25,7 +25,7 @@
 </form>
 
 <p>
-<a href="{% url accounts_register %}">Register an Account</a>
+<a href="{% url 'accounts_register' %}">Register an Account</a>
 </p>
 
 {% endblock %}
