--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
   <div class="left_column">
   <div class="navigation">
     <ul class="markermenu">
-        <li class="markermenu"><a href="{% url problems_index %}">Problems</a></li>
-        <li class="markermenu"><a href="{% url flat_pages_detail 'getting-running' %}">Getting Running</a></li>
-	<li class="markermenu"><a href="{% url accounts_logout %}" style="border-bottom-width: 0">Log Out</a></li>
+        <li class="markermenu"><a href="{% url 'problems_index' %}">Problems</a></li>
+        <li class="markermenu"><a href="{% url 'flat_pages_detail' 'getting-running' %}">Getting Running</a></li>
+	<li class="markermenu"><a href="{% url 'accounts_logout' %}" style="border-bottom-width: 0">Log Out</a></li>
     </ul>
   </div>
 
