--- a/templates/problems/right.html
+++ b/templates/problems/right.html
@@ -7,6 +7,6 @@
 You're right!
 </p>
 <p>
-<a href="{% url problems_index %}">Return to problems index.</a>
+<a href="{% url 'problems_index' %}">Return to problems index.</a>
 </p>
 {% endblock %}
