clean up static file handling

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>{% block title %}{% endblock %}</title>
-<link href="{%url 'site_media' '/css/style.css' %}" rel="stylesheet" type="text/css" />
+<link href="{%url 'static' '/css/style.css' %}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <div class="header">
 <div class="header_interior">
-  <img src="{%url 'site_media' '/images/logo.gif' %}" alt="Logo" width="44" height="44" style="float:left; margin-right:10px;" />
+  <img src="{%url 'static' '/images/logo.gif' %}" alt="Logo" width="44" height="44" style="float:left; margin-right:10px;" />
   <h1 class="title">Programming Heroes</h1></div>
   </div>
   <div class="content_body">
