--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ background-color:#006699;
 border-top: 8px solid #6699CC }
 
 .content_body{
-background-image:url(/site_media/images/bg1.jpg);
+background-image:url(/static/images/bg1.jpg);
 background-repeat: repeat-x;
 background-color:#F6F1DE;
 }
@@ -47,12 +47,12 @@ clear:both;
 width:184px;
 padding-left:6px;
 padding-right:6px;
-background-image:url(/site_media/images/nav_side.jpg);
+background-image:url(/static/images/nav_side.jpg);
 }
 
 .navigationbtm{
 width:196px;
-background-image:url(/site_media/images/nav_btm.jpg);
+background-image:url(/static/images/nav_btm.jpg);
 background-repeat:no-repeat;
 height:8px;
 margin-top:-5px;
@@ -71,7 +71,7 @@ margin-top:-5px;
 .hr{
 	width:485px;
 	height:8px;
-	background-image:url(/site_media/images/hr.gif);
+	background-image:url(/static/images/hr.gif);
 	margin-left:auto;
 	margin-right:auto;
 	margin-bottom:10px;
@@ -98,11 +98,11 @@ h2 {
 }
 
 h2.solved {
-    background-image:url(/site_media/images/checkmark.png);
+    background-image:url(/static/images/checkmark.png);
 }
 
 h2.unsolved {
-    background-image:url(/site_media/images/h2.gif);
+    background-image:url(/static/images/h2.gif);
 }
 
 h2 a:link, h2 a:hover, h2 a:visited {
@@ -158,7 +158,7 @@ list-style:none;
 }
 
 .markermenu li a{
-background:url(/site_media/images/arrow.gif) no-repeat 2px center;
+background:url(/static/images/arrow.gif) no-repeat 2px center;
 font-weight:bold;
 color: #006699;
 display: block;
@@ -213,7 +213,7 @@ color:#006699;}
 
 .file {
     float: left;
-    background:url(/site_media/images/file_icon.gif) no-repeat center top;
+    background:url(/static/images/file_icon.gif) no-repeat center top;
     height: 35px;
     padding-right: 10px;
     position: relative;
@@ -226,4 +226,4 @@ color:#006699;}
 h2.nopad{
     padding: 10px 0px 10px 0px;
 }
-    
+
