title change to WAPE

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <div class="header">
 <div class="header_interior">
   <img src="{%url 'static' '/images/logo.gif' %}" alt="Logo" width="44" height="44" style="float:left; margin-right:10px;" />
-  <h1 class="title">Programming Heroes</h1></div>
+  <h1 class="title">The Walt Askew Programming Experience &#0153;</h1></div>
   </div>
   <div class="content_body">
   <div class="content_interior">
