--- a/templates/problems/index.html
+++ b/templates/problems/index.html
@@ -10,7 +10,7 @@
     <h2 class="unsolved">
   {% endif %}
   <a href="/problems/{{ problem.id }}/">{{ problem }}</a></h2>
-  <p>{{ problem.description }}</p>
+  <p>{{ problem.description|truncatewords:40|safe|linebreaks }}</p>
   {% if not forloop.last %}
     <div class="hr"></div>
   {% endif %}
